--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,7 @@
   background-repeat: no-repeat;
   opacity: 0.5;
   z-index: 1; */
-  background-color: #CCC;
+  /* background-color: #CCC; */
   display: flex;
   flex-direction: row;
   flex-grow: 6;
